--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ serde_json = "1.0"
 # Error handling
 anyhow = "1.0"
 
+# Async trait support
+async-trait = "0.1"
+
 [build-dependencies]
 tonic-build = "0.12"
 
